--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -133,6 +133,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-randombytes')
+    compile project(':react-native-fs')
     compile project(':react-native-device-info')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
