Adds assets and generate keystore UX

--- a/app/package.json
+++ b/app/package.json
@@ -47,8 +47,10 @@
     "react-native-config": "^0.2.1",
     "react-native-device-info": "0.10.2",
     "react-native-drawer": "^2.3.0",
+    "react-native-elements": "^0.15.0",
     "react-native-fs": "^2.3.3",
     "react-native-randombytes": "^2.2.0",
+    "react-native-vector-icons": "^4.2.0",
     "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.2",
     "readable-stream": "^1.0.33",
