--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -133,6 +133,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
     compile project(':react-native-randombytes')
     compile project(':react-native-fs')
     compile project(':react-native-device-info')
