--- a/app/package.json
+++ b/app/package.json
@@ -33,8 +33,8 @@
     "bluebird": "^3.5.0",
     "browserify-sign": "^4.0.4",
     "browserify-zlib": "^0.1.4",
-    "buffer": "^3.6.0",
     "ethereumjs-util": "^5.1.2",
+    "ethjs-account": "^0.1.1",
     "ethjs-provider-http": "^0.1.6",
     "ethjs-query": "^0.2.6",
     "events": "^1.1.1",
@@ -68,6 +68,7 @@
     "redux-saga": "^0.14.3",
     "reduxsauce": "0.4.1",
     "seamless-immutable": "^7.0.1",
+    "secp256k1": "^3.3.0",
     "steam": "^1.4.0",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^1.0.3",
