--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "postinstall": "node_modules/.bin/rn-nodeify --install assert,buffer,crypto,http,https,events,net,path,process,stream,tls,vm --hack",
+    "postinstall": "node_modules/.bin/rn-nodeify --install assert,buffer,crypto,http,https,events,net,path,process,stream,vm --hack",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
@@ -33,6 +33,8 @@
     "bluebird": "^3.5.0",
     "browserify-sign": "^4.0.4",
     "browserify-zlib": "^0.1.4",
+    "buffer": "^3.6.0",
+    "elliptic": "^6.4.0",
     "ethereumjs-util": "^5.1.2",
     "ethjs-account": "^0.1.1",
     "ethjs-provider-http": "^0.1.6",
@@ -68,7 +70,6 @@
     "redux-saga": "^0.14.3",
     "reduxsauce": "0.4.1",
     "seamless-immutable": "^7.0.1",
-    "secp256k1": "^3.3.0",
     "steam": "^1.4.0",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^1.0.3",
