Adds additional util functions for tx signing and submission. WIP Still having problems forming proper RLP messages, so this still catches errors

--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
     "https-browserify": "0.0.1",
     "js-sha3": "^0.6.1",
     "lodash": "^4.17.2",
+    "number-to-bn": "^1.7.0",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "prop-types": "^15.5.10",
@@ -69,6 +70,7 @@
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
     "reduxsauce": "0.4.1",
+    "rlp": "^2.0.0",
     "seamless-immutable": "^7.0.1",
     "steam": "^1.4.0",
     "stream-browserify": "^1.0.0",
