--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "ethjs-account": "^0.1.1",
     "ethjs-provider-http": "^0.1.6",
     "ethjs-query": "^0.2.6",
+    "ethjs-signer": "^0.1.1",
     "events": "^1.1.1",
     "format-json": "^1.0.3",
     "https-browserify": "0.0.1",
