--- a/package.json
+++ b/package.json
@@ -3,28 +3,29 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "postinstall": "rn-nodeify --install assert,buffer,crypto,http,https,events,net,path,process,stream,vm --hack",
-    "start": "react-native start",
-    "test": "jest",
-    "clean": "rm -rf node_modules && rm -rf ./ios/build/ModuleCache && rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
-    "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
-    "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
-    "test:watch": "jest --watch",
-    "updateSnapshot": "jest --updateSnapshot",
-    "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
     "android:build": "cd android && ./gradlew assembleRelease",
-    "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
-    "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
+    "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
+    "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-    "precommit": "npm run git-hook",
-    "prepush": "npm run git-hook",
+    "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
+    "clean": "rm -rf node_modules && rm -rf ./ios/build/ModuleCache && rm -rf \"$TMPDIR/react-*\" && watchman watch-del-all && npm cache clean --force",
+    "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
+    "fixcode": "standard --fix",
     "git-hook": "npm run lint -s && npm run test -s",
+    "ios": "react-native run-ios",
     "lint": "standard --verbose | snazzy",
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
-    "fixcode": "standard --fix",
-    "ios": "react-native run-ios"
+    "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
+    "postinstall": "rn-nodeify --install assert,buffer,crypto,http,https,events,net,path,process,stream,vm --hack",
+    "precommit": "npm run git-hook",
+    "prepush": "npm run git-hook",
+    "start": "react-native start",
+    "test:watch": "jest --watch",
+    "test": "jest",
+    "updateSnapshot": "jest --updateSnapshot",
+    "upgrade": "react-native-git-upgrade"
   },
   "dependencies": {
     "apisauce": "^0.14.0",
@@ -96,6 +97,7 @@
     "mockery": "^2.0.0",
     "react-addons-test-utils": "~15.4.1",
     "react-dom": "~15.4.1",
+    "react-native-git-upgrade": "^0.2.7",
     "react-test-renderer": "16.0.0-alpha.12",
     "reactotron-react-native": "^1.12.0",
     "reactotron-redux": "^1.11.1",
