--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "lint": "standard --verbose | snazzy",
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
-    "postinstall": "rn-nodeify --install assert,buffer,crypto,http,https,events,net,path,process,stream,vm --hack",
+    "postinstall": "rn-nodeify --install assert,buffer,crypto,http,https,events,path,process,stream,vm --hack && react-native link",
     "precommit": "npm run git-hook",
     "prepush": "npm run git-hook",
-    "start": "react-native start",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
     "test:watch": "jest --watch",
     "test": "jest",
     "updateSnapshot": "jest --updateSnapshot",
@@ -53,7 +53,7 @@
     "querystringify": "0.0.4",
     "ramda": "^0.24.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "0.45.1",
+    "react-native": "0.47.1",
     "react-native-animatable": "^1.2.2",
     "react-native-config": "^0.2.1",
     "react-native-crypto": "^2.0.2",
@@ -63,7 +63,6 @@
     "react-native-fs": "^2.3.3",
     "react-native-http": "github:tradle/react-native-http#834492d",
     "react-native-randombytes": "^2.2.0",
-    "react-native-tcp": "^2.0.4",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.2",
@@ -86,7 +85,7 @@
     "babel-jest": "20.0.3",
     "babel-plugin-ignite-ignore-reactotron": "^0.3.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react-native": "2.0.0",
+    "babel-preset-react-native": "2.1.0",
     "enzyme": "^2.6.0",
     "husky": "^0.13.1",
     "ignite-animatable": "^1.0.0",
@@ -148,7 +147,6 @@
     "http": "react-native-http",
     "https": "https-browserify",
     "zlib": "browserify-zlib",
-    "net": "react-native-tcp",
     "path": "path-browserify"
   },
   "browser": {
@@ -163,7 +161,6 @@
     "http": "react-native-http",
     "https": "https-browserify",
     "zlib": "browserify-zlib",
-    "net": "react-native-tcp",
     "path": "path-browserify"
   }
 }
