--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "standard --verbose | snazzy",
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
-    "postinstall": "rn-nodeify --install assert,buffer,crypto,http,https,events,path,process,stream,vm --hack && react-native link",
+    "postinstall": "rn-nodeify --install assert,buffer,crypto,http,https,events,path,process,stream,vm --hack",
     "precommit": "npm run git-hook",
     "prepush": "npm run git-hook",
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -85,7 +85,7 @@
     "babel-jest": "20.0.3",
     "babel-plugin-ignite-ignore-reactotron": "^0.3.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react-native": "2.1.0",
+    "babel-preset-react-native": "2.0.0",
     "enzyme": "^2.6.0",
     "husky": "^0.13.1",
     "ignite-animatable": "^1.0.0",
