--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ethjs-signer": "^0.1.1",
     "events": "^1.1.1",
     "https-browserify": "0.0.1",
+    "js-sha3": "^0.6.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "react": "16.0.0-alpha.12",
@@ -34,6 +35,7 @@
     "react-navigation": "^1.0.0-beta.11",
     "readable-stream": "^1.0.33",
     "rlp": "^2.0.0",
+    "stream": "0.0.2",
     "stream-browserify": "^1.0.0",
     "url": "^0.10.3",
     "vm-browserify": "0.0.4"
