--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^3.5.0",
     "buffer": "^3.6.0",
     "elliptic": "^6.4.0",
+    "ethereumjs-util": "^5.1.2",
     "ethjs-account": "^0.1.1",
     "ethjs-query": "^0.2.6",
     "ethjs-signer": "^0.1.1",
