--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "buffer": "^3.6.0",
     "elliptic": "^6.4.0",
     "ethereumjs-util": "^5.1.2",
-    "ethjs-account": "^0.1.1",
     "ethjs-query": "^0.2.6",
     "ethjs-signer": "^0.1.1",
     "events": "^1.1.1",
@@ -36,6 +35,7 @@
     "react-navigation": "^1.0.0-beta.11",
     "readable-stream": "^1.0.33",
     "rlp": "^2.0.0",
+    "secp256k1": "^3.3.0",
     "stream": "0.0.2",
     "stream-browserify": "^1.0.0",
     "url": "^0.10.3",
