--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "buffer": "^3.6.0",
     "elliptic": "^6.4.0",
     "ethereumjs-util": "^5.1.2",
+    "ethjs-account": "^0.1.4",
     "ethjs-query": "^0.2.6",
     "ethjs-signer": "^0.1.1",
     "events": "^1.1.1",
