--- a/ios/GridPlus.xcodeproj/xcshareddata/xcschemes/GridPlus.xcscheme
+++ b/ios/GridPlus.xcodeproj/xcshareddata/xcschemes/GridPlus.xcscheme
@@ -31,7 +31,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "gridplus.app"
                BlueprintName = "gridplus"
-               ReferencedContainer = "container:gridplus.xcodeproj">
+               ReferencedContainer = "container:GridPlus.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -45,7 +45,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "gridplusTests.xctest"
                BlueprintName = "gridplusTests"
-               ReferencedContainer = "container:gridplus.xcodeproj">
+               ReferencedContainer = "container:GridPlus.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -63,7 +63,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "gridplusTests.xctest"
                BlueprintName = "gridplusTests"
-               ReferencedContainer = "container:gridplus.xcodeproj">
+               ReferencedContainer = "container:GridPlus.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -73,7 +73,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "gridplus.app"
             BlueprintName = "gridplus"
-            ReferencedContainer = "container:gridplus.xcodeproj">
+            ReferencedContainer = "container:GridPlus.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -96,7 +96,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "gridplus.app"
             BlueprintName = "gridplus"
-            ReferencedContainer = "container:gridplus.xcodeproj">
+            ReferencedContainer = "container:GridPlus.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -115,7 +115,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "gridplus.app"
             BlueprintName = "gridplus"
-            ReferencedContainer = "container:gridplus.xcodeproj">
+            ReferencedContainer = "container:GridPlus.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
