Finishes registration process. You can now cleanly register a device! Yay!

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.5.0",
     "buffer": "^3.6.0",
     "elliptic": "^6.4.0",
+    "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.2",
     "ethjs-account": "^0.1.4",
     "ethjs-query": "^0.2.6",
