--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-fs": "^2.5.1",
     "react-native-http": "github:tradle/react-native-http#834492d",
     "react-native-randombytes": "^2.2.0",
+    "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-tcp": "^3.2.2",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11",
