--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.1.0",
     "jest": "20.0.4",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "rn-nodeify": "^7.0.1"
   },
   "jest": {
     "preset": "react-native"
