--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "process": "^0.11.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
+    "react-native-chart": "^1.0.8-beta",
     "react-native-crypto": "^2.0.2",
     "react-native-elements": "^0.15.0",
     "react-native-fs": "^2.5.1",
