--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "process": "^0.11.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
-    "react-native-chart": "^1.0.8-beta",
     "react-native-crypto": "^2.0.2",
     "react-native-elements": "^0.15.0",
     "react-native-fs": "^2.5.1",
     "react-native-http": "github:tradle/react-native-http#834492d",
+    "react-native-pathjs-charts": "0.0.30",
     "react-native-randombytes": "^2.2.0",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-tcp": "^3.2.2",
