--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-pathjs-charts": "0.0.30",
     "react-native-randombytes": "^2.2.0",
     "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-spinkit": "^1.1.1",
     "react-native-tcp": "^3.2.2",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11",
